--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,13 @@ tbody {
   margin-right: 30%;
 }
 #second-city {
+  float:left;
   width:  40%;
   margin-left:  30%;
-  margin-right: 30%;
+  margin-right: 0%;
+}
+#adjust {
+  margin-left: 1%;
 }
 .map {
   width:auto;
