--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,14 @@ tbody {
 }
 
 #second-city {
+  float:left;
   width:  40%;
   margin-left:  30%;
-  margin-right: 30%;
+  margin-right: 0%;
+}
+
+#adjust {
+  margin-left: 1%;
 }
 .map {
   width:auto;
